<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <data>
            <variable
                name="data"
                type="com.example.rov.Life" />
        </data>


    <androidx.percentlayout.widget.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <SurfaceView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/life_video">

        </SurfaceView>

        <com.example.rov.RockingBar
            android:id="@+id/rocking_bar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="200dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_heightPercent="50%"
            app:layout_widthPercent="30%">

        </com.example.rov.RockingBar>

        <Button
            android:layout_width="wrap_content"
            android:id="@+id/back"
            android:background="#00000000"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:drawableStart="@drawable/ic_back">

        </Button>
        <Button
            android:id="@+id/A_Button"
            app:layout_widthPercent ="8%"
            app:layout_heightPercent = "16%"
            android:background="@drawable/joystick_button_click"
            android:text="@string/A_Button"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_marginTopPercent="60%"
            app:layout_marginLeftPercent="65%"
            >

        </Button>

        <Button
            android:id="@+id/B_Button"
            app:layout_widthPercent ="8%"
            app:layout_heightPercent = "16%"
            app:layout_marginTopPercent="60%"
            app:layout_marginLeftPercent="85%"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/joystick_button_click"
            android:text="@string/B_Button">

        </Button>

        <Button
            android:id="@+id/X_Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/joystick_button_click"
            app:layout_heightPercent="16%"
            app:layout_marginLeftPercent="75%"
            app:layout_marginTopPercent="45%"
            app:layout_widthPercent="8%"
            android:text="@string/X_Button">

        </Button>

        <Button
            android:id="@+id/Y_Button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_widthPercent ="8%"
            app:layout_heightPercent = "16%"
            app:layout_marginLeftPercent="75%"
            app:layout_marginTopPercent="75%"
            android:background="@drawable/joystick_button_click"
            android:text="@string/Y_Button">

        </Button>


    </androidx.percentlayout.widget.PercentRelativeLayout>

</layout>