<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.example.rov.DataAnalysis" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/PH"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="548dp"
        android:background="#00000000"
        android:drawableStart="@drawable/ic_ph"
        android:paddingStart="15dp"
        android:text="@string/PH"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/salinity"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.5"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/salinity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00000000"
        android:drawableStart="@drawable/ic_salinity"
        android:paddingStart="15dp"
        android:text="@string/salinity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintWidth_percent="0.5"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/turbidity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00000000"
        android:drawableStart="@drawable/ic_turbidity"
        android:paddingStart="15dp"
        android:text="@string/turbidity"
        app:layout_constraintEnd_toStartOf="@+id/depth"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PH"
        app:layout_constraintWidth_percent="0.5"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/depth"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00000000"
        android:drawableStart="@drawable/ic_depth"
        android:paddingStart="15dp"
        android:text="@string/depth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintTop_toBottomOf="@+id/salinity"
        app:layout_constraintWidth_percent="0.5"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/temperature"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/depth"
        app:layout_constraintWidth_percent="1" />

    <Button
        android:id="@+id/back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:drawableStart="@drawable/ic_back2"
        android:paddingStart="15dp"
        android:background="#00000000"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.2"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/data_analysis"
        android:textSize="20sp"
        android:paddingStart="20dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>


</layout>